2.3.1 (26.02.2019):

* Offer to switch from Facing to Reverse after scanning double-sided pages.
  Closes feature request #100


2.3.0 (26.01.2019):

* Optionally also include time information in metadata of PDF or DjVU.
  Closes feature request #102 (always sets the time to 0 UTC) (again)
* Reduced "bouncing" effect when dragging OCR output
* Fix update of image viewer/OCR output after deleting a page
* Support different resolutions in x and y directions.
  Closes feature request #101
* Make post-scan PNG conversion optional
* Remember size of multiple message window
* Update to German translation (thanks to Stephan Woidowski)
* Update to Swedish translation (thanks to Anders Jonsson)
* Update to Ukranian translation (thanks to Yuri Chornoivan)


2.2.2 (31.12.2018):

* Improved the error message when ImageMagick exceeds its resources.
  Closes bug #303 (I import djvu. . . when exporting to djvu - failed due to
  black and white images)
* Allow foreground colour of text of OCR output to be themed
* Correct some more vbox() calls left over from gtk+-2
  Closes Debian bug #916011 (Blank dialog - Can't locate object method "vbox")
* Use output image from user-defined tool even if it throws an error.
* Don't reapply buttons after reloading options.
  Closes bug #315 (Software Despeck setting - reload-recursion-limit)
* Update to Spanish translation (thanks to rodroes)
* Update to Ukranian translation (thanks to Yuri Chornoivan)
* Update to Italian translation (thanks to morodan)
* Update to French translation (thanks to Hugues Drolet)


2.2.1 (06.12.2018):

* Clear OCR output canvas when switching pages
* Ignore trailing whitespace in error messages when filtering them
* Lock initial view of OCR output to image when switching pages
* Fix centering of OCR output when zooming with mouse wheel
* Update to German translation (thanks to Tobias Bannert)
* Update to Czech translation (thanks to Pavel Borecki)


2.2.0 (30.11.2018):
