@@ -2,6 +2,7 @@
 
 * Offer to switch from Facing to Reverse after scanning double-sided pages.
   Closes feature request #100
+* + Edit profile functionality to scan dialog.
 
 
 2.3.0 (26.01.2019):
